# Autobot_Operating_TF

./: .gitignore  AutoBotOTTF.spec  AutoBotOTTFT.spec  CMakeLists.txt  README.md  app.py  compile.bat  config.json  example.txt
AutoBotOTTF/: hooker.py  requirements.txt
AutoBotOTTF/app_system/: client.py  connector.py  data_store.py  devices.py  loadconfig.py
AutoBotOTTF/config/: userconfig.json
AutoBotOTTF/modules/: framesmatch.py
AutoBotOTTF/params/: source_list.json
AutoBotOTTFT/: README.md  app.py  requirements.txt
AutoBotOTTFT/app_system/: client.py  console.py  emu_versions_check.py  frames.py  loadconfig.py
AutoBotOTTFT/controllers/: frame_query.py
AutoBotOTTFT/params/: emu_path_file.json
AutoBuff/: CMakeLists.txt
AutoBuff-GamePro/: CMakeLists.txt
AutoBuff-GamePro/src/: main.cpp
AutoBuff/src/: main.cpp
AutoBuffOTF/: CMakeLists.txt
app_system/: client.py  connector.py  devices.py  emu_versions_check.py  frames.py  loadconfig.py
controllers/: main_controller.py  main_frame_controller.py
libserver/: CMakeLists.txt
libserver/include/: server.hpp
modules/: framesmatch.py  framesprocess.py
params/: source_list.json
server/: CMakeLists.txt
server/include/: server.hpp
server/src/: server.cpp
src/: CMakeLists.txt
src/adb/: CMakeLists.txt
src/adb/include/: adb.hpp
src/adb/src/: adb.cpp
src/apps/: CMakeLists.txt  apps.cpp
src/apps/include/: apps.hpp
src/apps/src/: apps.cpp
src/autoloader/: CMakeLists.txt
src/autoloader/include/: autoloader.hpp
src/autoloader/src/: autoloader.cpp
src/config/: config.yaml
src/controller/: CMakeLists.txt
src/controller/include/: controller.hpp
src/controller/src/: controller.cpp
src/module_server/: CMakeLists.txt
src/module_server/src/: server.cpp
src/prefix/: prefix.yaml
src/server/: CMakeLists.txt
src/server/include/: server.hpp
src/server/src/: server.cpp
src/stream/: CMakeLists.txt
src/stream/include/: frame_buffer.hpp  stream.hpp
src/stream/src/: frame_buffer.cpp  stream.cpp
src/yaml-cpp/: CMakeLists.txt
