cmake_minimum_required(VERSION 3.0.0)
project(stream)
set(LIB_NAME stream)
add_library(${LIB_NAME} SHARED src/stream.cpp)
target_include_directories(${LIB_NAME} PUBLIC include)
if(WIN32)
    find_library(WSOCK32_LIBRARY wsock32)
    find_library(WS2_32_LIBRARY ws2_32)
    target_link_libraries(${LIB_NAME} ws2_32 wsock32)
endif()